// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityItem component snapshot Should correctly render CityItem component (active) 1`] = `
<li
  className="locations__item"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`CityItem component snapshot Should correctly render CityItem component (not active) 1`] = `
<li
  className="locations__item"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item "
    href="#"
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
